--- a/examples/grid.html
+++ b/examples/grid.html
@@ -20,7 +20,7 @@
     <div class="container">
         <h1>The 12-element grid can be utilized in various combinations.</h1>
     </div>
-    <div class="container">
+    <div class="container sparcer-16">
         <h1>Two columnt layouts</h1>
         <div class="row">
             <div class="col col-1-12" style="background-color: lightblue;">col-1-12</div>
@@ -33,6 +33,19 @@
         <div class="row">
             <div class="col col-3-12" style="background-color: lightblue;">col-3-12</div>
             <div class="col col-9-12" style="background-color: lightcoral;">col-9-12</div>
+        </div>
+        <div class="row">
+            <div class="col col-4-12" style="background-color: lightblue;">col-3-12</div>
+            <div class="col col-8-12" style="background-color: lightcoral;">
+                <div class="row">
+                    <div class="col col-6-12" style="background-color: lightgreen;">One</div>
+                    <div class="col col-6-12" style="background-color: lightblue;">Two</div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col col-5-12" style="background-color: lightblue;">col-3-12</div>
+            <div class="col col-7-12" style="background-color: lightcoral;">col-9-12</div>
         </div>
     </div>
     <div class="container">
